# templates

hs-nix-via-callCabal2Nix-HIE/: hie.yaml
hs-nix-via-callCabal2Nix-simplest/: pdv.cabal  shell.nix
hs-nix-via-callcabal2nix/: pdv.cabal
