name:                projectname
version:             0.1.0.0
license:             BSD3
maintainer:          foo@bar.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Lib
  build-depends: base -any,
                 protolude -any
  default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                      ExistentialQuantification RecordWildCards TypeSynonymInstances
                      StandaloneDeriving FlexibleInstances TupleSections
                      MultiParamTypeClasses NoImplicitPrelude OverloadedStrings
                      OverloadedLists ViewPatterns OverloadedLabels DeriveFunctor
                      TypeFamilies DeriveAnyClass DeriveGeneric DeriveDataTypeable
                      DeriveFoldable DerivingStrategies TypeApplications MultiWayIf
                      TemplateHaskell BlockArguments GADTs FlexibleContexts TypeOperators
                      DataKinds PolyKinds AllowAmbiguousTypes FunctionalDependencies
                      UndecidableInstances
  ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
               -Widentities -Wredundant-constraints -Wcpp-undef -fwarn-tabs
               -fwarn-unused-imports -fwarn-missing-signatures
               -fwarn-name-shadowing -fprint-potential-instances
               -fwarn-unused-do-bind -fwarn-wrong-do-bind
               -fwarn-incomplete-patterns -Wincomplete-record-updates
               -Wmonomorphism-restriction -Wimplicit-prelude
               -Wmissing-local-signatures -Wmissing-exported-signatures
               -Wmissing-export-lists -Wmissing-home-modules -Widentities
               -Wredundant-constraints -Wpartial-fields
  default-language: Haskell2010
